--- a/index.html
+++ b/index.html
@@ -13,33 +13,15 @@
   <div class="jumbotron m-0">
     <h1 class="display-4">Pauline Ferraro</h1>
     <p class="lead">My games from GAME 601 - Game Prototyping at American University in Fall 2019</p>
-  </div>
   <div class="card">
-    <div class="card-header h3">Game Modification: PhAJANGO;</div>
+    <div class="card-header h3">Sea Of Glass</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./phajango.jpg.jpg">
       </div>
       <div class="col-6">
-        A spin on an old dice game. Roll dice for number combinations to fill up your board before your competitor. This new game relies heavily on math and chance. Be able to plan out moves before you run out of them.
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="PhAJANGO.pdf" role="button">PLAY</a>
-      </div>
-    </div>
-  </div>
-  
-  <div class="card">
-    <div class="card-header h3">(Final) Digital Game: ALONE</div>
-    <div class="card-body row">
-      <div class="col-4">
-        <img class="img-fluid" src="./alonepainting.png">
-      </div>
-      <div class="col-6">
-        A hyperlink fiction game about depression, agoraphobia and dealing with loss. This game has around four different endings in the form of poems the author has written in her own personal journey with mental illness. This game is a never ending loop with each ending guiding the user back to the start. Painting done by myself.
-      </div>
-      <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./alone.html.html" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="./SeaofGlass.html/html" role="button">PLAY</a>
       </div>
     </div>
   </div>
