--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GAME 601 Portfolio (Fall 2019)</title>
-  <meta name="description" content="What I made in GAME 601 (Game Programming) at American University in Fall 2019">
-  <meta name="author" content="Pauline Ferraro">
+  <title>The Painted Ideal</title>
+  <meta name="description" content="Interactive Fiction/ Poetry Portfolio">
+  <meta name="author" content="Seraph Ferraro">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="jumbotron m-0">
-    <h1 class="display-4">Pauline Ferraro</h1>
-    <p class="lead">My games from GAME 601 - Game Prototyping at American University in Fall 2019</p>
+    <h1 class="display-4">The Painted Ideal</h1>
+    <p class="lead">collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
   <div class="card">
     <div class="card-header h3">Sea Of Glass</div>
     <div class="card-body row">
