--- a/SeaofGlass.html.html
+++ b/SeaofGlass.html.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Sea of Glass" startnode="1" creator="Twine" creator-version="2.3.5" ifid="5276C28F-9C67-440C-9B42-E2B4D033C605" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+<tw-storydata name="Sea of Glass" startnode="37" creator="Twine" creator-version="2.3.5" ifid="5276C28F-9C67-440C-9B42-E2B4D033C605" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 
 
@@ -19,7 +19,7 @@
 
 
 
-</script><tw-passagedata pid="1" name="AWAKE" tags="opening" position="0,150" size="200,200">You wake up, slowly falling through the air. A voice calls in your head.
+</script><tw-passagedata pid="1" name="AWAKE" tags="opening" position="170,271.6666666666667" size="100,100">You wake up, slowly falling through the air. A voice calls in your head.
 Who are you?
 [[I don&#39;t know]]
 [[i am me]]</tw-passagedata><tw-passagedata pid="2" name="I don&#39;t know" tags="" position="275,50" size="100,100">[[try to remember who you were]]
@@ -117,10 +117,19 @@ She says that her friends have a table in the back corner. Some of them you know
 you feel like you don&#39;t [[belong]]
 a song plays that reminds you of Saint Serenity again. its an [[old]]song and you still remember it. </tw-passagedata><tw-passagedata pid="34" name="walk to your friend" tags="" position="2375,350" size="100,100">you thought you saw her, but its so loud and everyone starts to look the same. everything blending into one another. faces turning mostruous and they are all looking at you. laughing shouting, all at  you. your chest starts to hurt and you start scratching softly at your arm. 
 
-[[HEY over here!!]] </tw-passagedata><tw-passagedata pid="35" name="belong" tags="" position="2275,700" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="36" name="old" tags="" position="2400,700" size="100,100">you remember the man who&#39;d come in at closing and threaten you everynight. 
+[[HEY over here!!]] </tw-passagedata><tw-passagedata pid="35" name="belong" tags="" position="2275,700" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="36" name="old" tags="" position="2390,700" size="100,100">you remember the man who&#39;d come in at closing and threaten you everynight. 
 
 
-</tw-passagedata></tw-storydata>
+</tw-passagedata><tw-passagedata pid="37" name="start" tags="" position="38.333333333333314,86.66666666666674" size="100,100">
+(text-style:&quot;bold&quot;)[Sea of Glass] 
+
+(text-rotate:45)+(text-style:&quot;superscript&quot;)[Written by]
+
+(text-rotate:75)+(text-style:&quot;subscript&quot;)[Seraph Ferraro]
+
+
+
+[[AWAKE]] </tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
