--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <div class="jumbotron m-0">
-    <h1 class="display-4">The Painted Ideal</h1>
-    <p class="lead">collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
+    <h1 class="display-4">Seraph Ferraro </h1>
+    <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
   <div class="card">
     <div class="card-header h3">Sea Of Glass</div>
     <div class="card-body row">
