--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="col-6">
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./SeaofGlass.html.html" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="./sog.html.html" role="button">PLAY</a>
       </div>
     </div>
   </div>
