--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <h1 class="display-4">Seraph Ferraro </h1>
     <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
   <div class="card">
+    <div class="card-header h3">Introduction</div>
+    <div class="card-body row">
+    </div>
+  </div>
+  <div class="jumbotron m-0">
+    <h1 class="display-4">Seraph Ferraro </h1>
+    <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
+  <div class="card">
     <div class="card-header h3">Sea Of Glass</div>
     <div class="card-body row">
       <div class="col-4">
