--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 </head>
 
 <body>
-  <div class="jumbotron m-0">
-    <h1 class="display-4">Seraph Ferraro </h1>
-    <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
-  <div class="card">
-    <div class="card-header h3">Introduction</div>
-    <div class="card-body row">
-    </div>
-  </div>
+  <p> Welcome to my Graduate studies Portfolio. Here is the collection of work I have completed during my time at American University 2019-2021.  </p>
   <div class="jumbotron m-0">
     <h1 class="display-4">Seraph Ferraro </h1>
     <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
