--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 </head>
 
 <body>
-  <p> Welcome to my Graduate studies Portfolio. Here is the collection of work I have completed during my time at American University 2019-2021.  </p>
   <div class="jumbotron m-0">
     <h1 class="display-4">Seraph Ferraro </h1>
     <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
+    <div class="card">
+       <div class="card-header h3">Introduction</div>
+       <div class="card-body row">
+         <div class="col-4">
+         </div>
+         <div class="col-6">
+           Welcome to my Graduate studies Portfolio. Here is the collection of work I have completed during my time at American University 2019-2021.
+         </div>
+         </div>
+     </div>
   <div class="card">
     <div class="card-header h3">Sea Of Glass</div>
     <div class="card-body row">
