--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
   <div class="jumbotron m-0">
     <h1 class="display-4">Seraph Ferraro </h1>
-    <p class="lead">The Painted Ideal: Interactive Fiction/ Poetry Portfolio collection of interactive fiction and poetry written during my Graduate Studies at American University</p>
+    <p class="lead">The Painted Ideal: Interactive Fiction / Poetry Portfolio.</p>
     <div class="card">
        <div class="card-header h3">Introduction</div>
        <div class="card-body row">
          <div class="col-4">
          </div>
          <div class="col-6">
-           Welcome to my Graduate studies Portfolio. Here is the collection of work I have completed during my time at American University 2019-2021.
+           Welcome to my Graduate Studies Portfolio. Here is the collection of work I have completed during my time at American University 2019-2021.
          </div>
          </div>
      </div>
@@ -29,6 +29,7 @@
       <div class="col-4">
       </div>
       <div class="col-6">
+        Midterm for GAME 696: Writing for Interactivity
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="./seaofglassNewVer1.html.html" role="button">PLAY</a>
