--- a/seaofglassNewVer1.html.html
+++ b/seaofglassNewVer1.html.html
@@ -13,7 +13,7 @@
 
 <tw-storydata name="Sea of Glass" startnode="1" creator="Twine" creator-version="2.3.5" ifid="5276C28F-9C67-440C-9B42-E2B4D033C605" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="angel" color="gray"></tw-tag>,<tw-tag name="startup" color="red"></tw-tag><tw-passagedata pid="1" name="Close the Book" tags="opening" position="0,600" size="200,200">
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="angel" color="gray"></tw-tag>,<tw-tag name="startup" color="red"></tw-tag>,<tw-tag name="ending" color="blue"></tw-tag><tw-passagedata pid="1" name="Close the Book" tags="opening" position="0,600" size="200,200">
 (text-style:&quot;bold&quot;)[Sea of Glass] 
 
 (text-rotate:45)+(text-style:&quot;superscript&quot;)[Written by]
@@ -28,7 +28,7 @@
 
 </tw-passagedata><tw-passagedata pid="2" name="I don&#39;t know" tags="" position="500,400" size="100,100">[[Try to remember who you are]]
 [[Listen]]
-</tw-passagedata><tw-passagedata pid="3" name="I am me" tags="" position="300,0" size="100,100">(background: (gradient: 0, 0,red, 1,black)) [“Maturity, one discovers, has everything to do with the acceptance of &#39;not knowing.&#39; ” 
+</tw-passagedata><tw-passagedata pid="3" name="I am me" tags="ending" position="300,0" size="100,100">(background: (gradient: 0, 0,red, 1,black)) [“Maturity, one discovers, has everything to do with the acceptance of &#39;not knowing.&#39; ” 
 ― Mark Z. Danielewski, //House of Leaves//]
 
 [[Close the Book]] </tw-passagedata><tw-passagedata pid="4" name="Try to remember who you are" tags="" position="500,600" size="200,100">The Voice calls to you once more.
@@ -122,7 +122,7 @@ You glance over at the clock and it reads 5:48 pm. You’ve been here since 8:00
 
 [[Go to the bar to meet your friend]]
 
-[[Hold on to this memory]]</tw-passagedata><tw-passagedata pid="28" name="the end" tags="the-end" position="3900,100" size="100,100">I hope one day to make a masterpiece that no one ruins by attempting to understand it. 
+[[Hold on to this memory]]</tw-passagedata><tw-passagedata pid="28" name="the end" tags="the-end" position="0,100" size="100,100">I hope one day to make a masterpiece that no one ruins by attempting to understand it. 
 [[Close the Book]] 
 
 </tw-passagedata><tw-passagedata pid="29" name="Try to wake up" tags="hub" position="1300,600" size="200,100">(text-rotate:45)+(text-style:&quot;superscript&quot;)[slowly] 
@@ -180,9 +180,58 @@ The door opens and (colour: &quot;red&quot;)[He] walks over to you, as an [[old]
 
 [[then turn left]] (align: &quot;==&gt;&quot;)[[then turn right]]</tw-passagedata><tw-passagedata pid="39" name="upwards" tags="" position="3400,400" size="100,100">Floating upwards, you find yourself in the electronics store down the street from your apartment. You scan the empty store looking for the ^^light bulbs^^. You smile to yourself, remembering this time to get the ^^light bulbs^^. You checkout the ^^light bulbs^^ at one of those self-checkout things, relieved to not have to interact with some (text-style:&quot;blur&quot;)[dead-eyed teen].  
 You walk back home towards your apartment, proud of accomplishing the small task of bringing (text-style:&quot;smear&quot;)[light] back to your home. 
-</tw-passagedata><tw-passagedata pid="40" name="Run away" tags="" position="3400,1500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="41" name="Stay" tags="" position="3400,1300" size="100,100">You swallow your fear and chase it down with vodka, your friend looks concerned but you smile at her. This seems to quell her fear and you go about the evening, drink after drink. Friends start to leave one by one untill your friend leaves with a kiss on your cheek as her partner picks her up. </tw-passagedata><tw-passagedata pid="42" name="Go down the street towards the the left" tags="" position="2200,800" size="100,100">[[Go right]]</tw-passagedata><tw-passagedata pid="43" name="Go right" tags="" position="2600,800" size="100,100">(align: &quot;==&gt;&quot;)[[go right again]]
-[[turn left]]</tw-passagedata><tw-passagedata pid="44" name="go right again" tags="" position="2800,750" size="100,100">(align: &quot;==&gt;&quot;)[[turn right]]</tw-passagedata><tw-passagedata pid="45" name="turn right" tags="" position="3000,800" size="100,100">[[Follow the bird]] </tw-passagedata><tw-passagedata pid="46" name="turn left" tags="" position="2800,850" size="100,100">[[Follow the bird]] </tw-passagedata><tw-passagedata pid="47" name="then turn left" tags="" position="2400,650" size="100,100">(align: &quot;==&gt;&quot;)[[Go right]]</tw-passagedata><tw-passagedata pid="48" name="then turn right" tags="" position="2375,500" size="100,100">(align: &quot;==&gt;&quot;)[[continue to turn right]]</tw-passagedata><tw-passagedata pid="49" name="continue to turn right" tags="" position="2600,500" size="100,100">[[Follow the bird]] 
-[[become lost]]</tw-passagedata><tw-passagedata pid="50" name="become lost" tags="" position="2800,500" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+
+Each night when you return home, you [[Close the Book]]. </tw-passagedata><tw-passagedata pid="40" name="Run away" tags="" position="3400,1500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="41" name="Stay" tags="" position="3400,1300" size="100,100">You swallow your fear and chase it down with vodka, your friend looks concerned but you smile at her. This seems to quell her fear and you go about the evening, drink after drink. Friends start to leave one by one untill your friend leaves with a kiss on your cheek as her partner picks her up. </tw-passagedata><tw-passagedata pid="42" name="Go down the street towards the the left" tags="" position="2200,800" size="100,100">You leave the downtown, the tall buildings shfrinking behind your back. the subburbs building as spaced out identical homes in neat perfect little rows. 
+One of the houses is familar enough to you and you wander in. Greeted by dust of your childhood. you sit down on the floor of your old living room, lamenting on where it all went wrong. the day you left home to never come back, your parents miss you. they always miss you no matter where you are. When you come home, (colour:#008080)[I think], that is when they miss you the most. FOr you always leave, like a ghost in the night fading into the night. You lay here for a while, tears of happiness of the memeories you had forgotten stain the floor baords. little puddles like the ones you jumped in as a child. 
+
+You leave aftr a while to [[Go right]], heading back to the down town area. </tw-passagedata><tw-passagedata pid="43" name="Go right" tags="" position="2400,775" size="100,100">The maw of the city reaches out to you, threaenting to swallow you whole if you lose your way. How will you know where to go? Does it even matter anymore? the prison of your own making, a place youve condemmed yourself to for life everlasting. where will you go?
+
+(align: &quot;==&gt;&quot;)[[go right again]]
+[[turn left]]</tw-passagedata><tw-passagedata pid="44" name="go right again" tags="" position="2600,725" size="100,100">You pass the building that mirrors the one you work at, this one, however is a husk of decay. You shutter, thinking about how you always have to return here, 
+&amp;emsp;Day after day. 
+&amp;emsp;&amp;emsp;Week after week. 
+&amp;emsp;&amp;emsp;&amp;emsp;Year after year. 
+&amp;emsp;&amp;emsp;&amp;emsp;&amp;emsp;Life after life. 
+
+You trun away from this place, gulity that you lothe it so. The people you work with aren&#39;t bad and it pays well. the guilt you carry with you eats at your heart. 
+
+(align: &quot;==&gt;&quot;)[[turn right]]</tw-passagedata><tw-passagedata pid="45" name="turn right" tags="" position="2800,775" size="100,100">You always return here, a bench on the side walk. Empty storefronts echo the hollow skeleton of your frame. You look at your reflection–nothing is there. Sunken eyes reflect abyssian darkness festering in your heart. You feel the crushing lonliness leak from your eyes. A (colour:yellow)[bird] lands on your hand. Looking up at you, light and glowing.
+[[Follow the bird]] </tw-passagedata><tw-passagedata pid="46" name="turn left" tags="" position="2600,850" size="100,100">You always return here, a bench on the side walk. empty storefronts echo the hollow skeleton of your frame. you look at your reflection and nothing is there. Sunken eyes reclect abyssian darkness festering in your heart. You feel the crushing lonliness leak from your eyes. A (colour:yellow)[bird] lands on your hand. Looking up at you, light and glowing.   
+[[Follow the bird]] </tw-passagedata><tw-passagedata pid="47" name="then turn left" tags="ending" position="2600,0" size="100,100">Going left here takes you to the docks on the edge of the (colour: grey) [city]. Looking over the edge of the pier you stare into frozen waves of glass. glass reflecting the inky darkness of the sky, soft light boucning off the waves. You walk down the pier and place a foot down on the sea. tentativly walking on the surface of the ocean. you lay down here admist the frozen waves of time and think. your breath soft and low, the sky bleeding into the sea. 
+Your war
+&amp;emsp; with yourself
+&amp;emsp;&amp;emsp;is now
+&amp;emsp;&amp;emsp;&amp;emsp;over
+The sea is your home now and you fade into nothingness. 
+
+[[Close the Book]] 
+
+</tw-passagedata><tw-passagedata pid="48" name="then turn right" tags="" position="2400,500" size="100,100">Turning right leads you down a path riddled with vines and weeds poking through the cobblestone. You remember how you used to take long walks with your dad on the shore line; looking up at the stars above in wonder and amazement. But here, looking up, there is nothing but inky blackness. the inky sky bleeds into rain falling down on you, you wipe your eyes. the abyss gapes before you and you are powerless to do anything but stand in the rain. hopeless and lost in this sinking (colour: grey)[city] 
+
+
+
+(align: &quot;==&gt;&quot;)[[continue to turn right]]</tw-passagedata><tw-passagedata pid="49" name="continue to turn right" tags="" position="2600,500" size="100,100">You find yourself walking in a circle and are close to where you started but, while the streets look the same the buildings do not. all the street signs are familar, sitting on one of them is a small golden (color: yellow)[bird]. You look up at the bird, tears and rain mixing in a pool at your feet. Light from the street lamps (text-style:&quot;blur&quot;)[dim] and (text-style:&quot;smear&quot;)[glow] with your breath.   
+(align: &quot;=&gt;&lt;==&quot;)[Are you seeking salvation?] 
+
+(align: &quot;=&gt;&lt;==&quot;)[[Follow the bird]] 
+(align: &quot;=&gt;&lt;==&quot;)[[become lost]]</tw-passagedata><tw-passagedata pid="50" name="become lost" tags="ending" position="2800,0" size="100,100">The salvation you seek won’t come, 
+(align: &quot;==&gt;&quot;)[rain falling like tears on the window pane.] 
+Your story is almost done. 
+
+(align: &quot;==&gt;&quot;)[ Emotions welling up like a hurricane.]
+All your lifetime
+(align: &quot;==&gt;&quot;)[you’ve lived with this pain]
+
+Looking up at the sky of another place and time,
+(align: &quot;==&gt;&quot;)[scared the salvation will never come]
+Feeling empty and lost in this accursed sublime. 
+
+(align: &quot;==&gt;&quot;)[When all is said and done,]
+(align: &quot;==&gt;&quot;)[You have nowhere left to run.] 
+
+Nowhere left to look, 
+[[Close the Book]]
+</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
