--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Midterm for GAME 696: Writing for Interactivity
       </div>
       <div class="col-2">
-        <a class="btn btn-primary btn-block" href="./sogv10.html.html" role="button">PLAY</a>
+        <a class="btn btn-primary btn-block" href="./sogFinal.html.html" role="button">PLAY</a>
       </div>
     </div>
   </div>
